# regolith-displayd

./: .gitignore  Cargo.toml  Makefile  README.md  org.gnome.Mutter.DisplayConfig.xml  regolith-displayd-init  regolith-displayd.desktop  regolith-displayd.service
data/: regolith-init-displayd.service  regolith-init-kanshi.service
debian/: README.Debian  changelog  control  copyright  install  rules
src/: ctrc.rs  dbus.rs  lib.rs  main.rs  modes.rs  monitor.rs  output.rs  resources.rs
src/dbus/: modes.rs  monitor.rs  properties.rs
~/.config/regolith2/kanshi/outputs/: LG Electronics LG ULTRAGEAR 204NTDV9E466  LG Electronics LG ULTRAGEAR 204NTDV9E466Najing CEC Panda FPD Technology CO. ltd 0x0050 Unknown  Najing CEC Panda FPD Technology CO. ltd 0x0050 Unknown
